# torch-verb

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
audio/ir_analog/: README.md
docs/: conf.py  index.md
src/torch_verb/: __init__.py  convolve.py  delay.py  fdn.py  plotting.py  schroeder.py  signals.py
tests/: test_convolve.py  test_delay.py  test_echo.py  test_fdn.py  test_schroeder.py  test_signals.py
torchreverb/: convolve.py  decay.py  echo.py  schroder.py  signals.py
torchverb/: __init__.py  convolve.py  decay.py  delay.py  echo.py  fdn.py  plotting.py  schroeder.py  signals.py
