[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torch_verb"
version = "0.1.0"
description = "A reverberation toolkit for PyTorch"
authors = [{name = "Francesco Papaleo"}]
license = {file = "LICENSE"}
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
  "torchaudio",
]

[project.optional-dependencies]
test = [
  "pytest>=6.0",
  "pytest-cov",
]

[project.urls]
homepage = "https://github.com/francescopapaleo/torch-verb"
repository = "https://github.com/francescopapaleo/torch-verb"
documentation = "https://github.com/francescopapaleo/torch-verb/docs"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    .git
    | __pycache__
    | build
    | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = [
  "tests",
]
