[metadata]
name = torchverb
version = 0.0.1
description = A reverberation toolkit for PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
author = Francesco Papaleo
url = http://github.com/francescopapaleo/torchverb
license = AGPLv3
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Affero GNU General Public License v3 (AGPL-3.0)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    torch
    torchaudio
    matplotlib
    pytest
python_requires = >=3.6

[options.entry_points]
console_scripts =
    # Define any console scripts here


[flake8]
max-line-length = 88
extend-ignore = E203, W503
# E203 and W503 are ignored for compatibility with Black

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = 
    .git
    __pycache__
    build
    dist
