[metadata]
name = torch_verb
version = 0.1.0
description = A reverberation toolkit for PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
author = Francesco Papaleo
url = http://github.com/francescopapaleo/torch-verb
license = GPLv3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
url = https://github.com/francescopapaleo/torch-verb
project_urls =
    Documentation = https://github.com/francescopapaleo/torch-verb/docs
    Source = https://github.com/francescopapaleo/torch-verb

[options]
python_requires = >=3.10
install_requires =
    torch
    torchaudio
    matplotlib
    pytest

[options.extras_require]
test =
    pytest>=6.0
    pytest-cov

[tool:pytest]
minversion = 6.0
addopts = -ra --showlocals --strict-markers --strict-config
xfail_strict = true
filterwarnings = error
log_cli_level = info
testpaths =
    tests

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist
